added figure updated formatting

--- a/inst/rmarkdown/templates/HCI Basel Report/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/HCI Basel Report/skeleton/skeleton.Rmd
@@ -18,33 +18,35 @@ library(tidyverse) # the power of the pipe %>%
 library(psych) # includes useful methods such as exploratory factor analysis
 library(GPArotation) # needed for psych
 library(lavaan) # THE package for CFA / SEM
+library(semPlot) # plot CFA models
+# add any additional packages you may need here
 ```
 <!-- Keep this to help us check your word count-->
 Word count: `r as.integer(sub("(\\d+).+$", "\\1", system(sprintf("wc -w %s", knitr::current_input()), intern = TRUE))) - 20`
 <!-- End keep this -->
 
 # Abstract
-Verständliche Zusammenfassung der wichtigsten Punkte (Problem, Methode, Resultate, Implikationen)
+* Verständliche Zusammenfassung der wichtigsten Punkte (Problem, Methode, Resultate, Implikationen)
 
 Author keywords: *`r rmarkdown::metadata$keywords`*
 
 # Introduction
-Problemstellung klar, zentrale Konzepte definiert
+* Problemstellung klar, zentrale Konzepte definiert
 
 Zitationen lassen sich im Biblatex-Format einfügen (siehe Datei mybib.bib): 
 In @Stodden2014, authors mentioned Word tables as one of the obstacles to effective collaboration.
 
 # Method
-Methodisches Vorgehen nachvollziehbar und begründet
-Auswahl der Messinstrumente ist begründet
-Stichprobe ist vollständig beschrieben (Source, N, Age, Gender, Data cleaning) 
+* Methodisches Vorgehen nachvollziehbar und begründet
+* Auswahl der Messinstrumente ist begründet
+* Stichprobe ist vollständig beschrieben (Source, N, Age, Gender, Data cleaning) 
 
 ## Measures
 
 Tabellen lassen sich z.B. mit dem Package `kableExtra` sehr flexibel gestalten. 
 ```{r overview-doc-prep, results='asis'}
 df.items <- data.frame(number = 1:9,item = row.names(Thurstone.33))
-kbl(df.items, caption = "Overview of questionnaire") %>%
+kbl(df.items, caption = "Table 1: Overview of questionnaire") %>%
   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
 ```
 
@@ -56,9 +58,9 @@ kbl(df.items, caption = "Overview of questionnaire") %>%
 
 # Results
 
-Resultate mit allen statistischen Kennwerten korrekt berichtet
-Deskriptive Statistiken (M, SD) für zentrale Variablen
-Adequate Verwendung von Tabellen und Grafiken zur Verdeutlichung zentraler Ergebnisse
+* Resultate mit allen statistischen Kennwerten korrekt berichtet
+* Deskriptive Statistiken (M, SD) für zentrale Variablen
+* Adequate Verwendung von Tabellen und Grafiken zur Verdeutlichung zentraler Ergebnisse
 
 
 ```{r fa-pattern-matrix}
@@ -68,15 +70,28 @@ df <- data.frame(unclass(fa.out$loadings), h2=fa.out$communalities, u2= fa.out$u
 
 df %>% 
   mutate(across(where(is.numeric), round, 3)) %>% 
-  kbl(caption = "Pattern matrix of the EFA for questionnaire 1") %>%
+  kbl(caption = "Table 2: Pattern matrix of the EFA for questionnaire 1") %>%
   kable_styling()
+```
+
+
+```{r cfa-figure, fig.cap="Figure 1: Measurement model"}
+model_cfa2fh <- "
+  VERB =~ Definitions + Classification + Artificial_Languange + Antonyms + Analogies + Logical_Inference + Paragraph_Reading
+  REAS =~ Arithmetical_Problems + Number_Series_Completion"
+
+fit_cfa2f <- cfa(model_cfa2fh, sample.cov = Thurstone.33, sample.nobs = 4175)
+
+semPaths(fit_cfa2f, "std", style="lisrel", weighted = F, nCharNodes = 7, shapeMan = "rectangle",
+         sizeMan = 5, sizeLat = 5,sizeLat2 = 5, sizeInt = 5, sizeMan2 = 5, thresholdSize = 5, layout = "circle2")
+
 ```
 
 
 
 # Discussion
-Interpretation und Diskussion nachvollziehbar
-Mindestens eine mögliche Einschränkung (Limitation) wird diskutiert (abgesehen von kleinem N) 
+* Interpretation und Diskussion nachvollziehbar
+* Mindestens eine mögliche Einschränkung (Limitation) wird diskutiert (abgesehen von kleinem N) 
 
 Bonus:
 Bezug zu diskutierten Aspekten aus dem gesamten Seminar und/oder zu weiterführender Literatur
@@ -86,9 +101,11 @@ Bezug zu diskutierten Aspekten aus dem gesamten Seminar und/oder zu weiterführe
 
 # References
 
+<!-- Keep this: This code here makes it possible to put the references before the Appendix.  -->
 <div id="refs"></div>
 
 \newpage
 # Appendix
+<!-- End keep this -->
 
 Report all items used here and any additional *relevant* tables or figures.
